# Specli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  specli.json
.github/workflows/: publish.yml
docs/: auth.md  configuration.md  getting-started.md  path-rules.md  plugins.md  skill-generation.md
examples/: README.md  uspto-openapi.json
plugins/example_plugin/: __init__.py  plugin.py
src/specli/: __init__.py  __main__.py  app.py  config.py  exceptions.py  exit_codes.py  models.py  output.py
src/specli/auth/: __init__.py  base.py  credential_store.py  manager.py
src/specli/cache/: __init__.py  cache.py
src/specli/client/: __init__.py  async_client.py  response.py  (+1 more)
tests/: conftest.py  test_config.py  test_output.py
tests/fixtures/: complex_auth.json  petstore_3.0.json  petstore_3.1.json
tests/test_auth/: test_api_key_gen.py  test_api_login.py  test_auth_plugins.py  test_browser_login.py  test_credential_store.py  test_device_code.py  test_manual_token.py  test_oauth2_plugins.py
tests/test_cache/: test_cache.py
tests/test_client/: test_response.py  test_sync_client.py
tests/test_enrichment/: test_enricher.py  test_scanner.py  test_strings.py
tests/test_generator/: test_command_tree.py  test_param_mapper.py  test_path_rules.py
tests/test_integration/: test_build.py  test_completion.py  test_dynamic_commands.py  test_init_flow.py  test_uspto_example.py
tests/test_parser/: test_extractor.py  test_loader.py  test_resolver.py
tests/test_plugins/: test_plugins.py
tests/test_skill/: test_skill_generator.py
(+51 files in other folders)
